// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test rendering of Exceeds both socioeco burdens when is NOT burdended 1`] = `
<DocumentFragment>
  <div>
    <div>
      At or above both associated thresholds?
    </div>
    <div>
      No
    </div>
  </div>
</DocumentFragment>
`;

exports[`test rendering of Exceeds both socioeco burdens when is burdended 1`] = `
<DocumentFragment>
  <div>
    <div>
      At or above at least one threshold?
    </div>
    <div>
      Yes
    </div>
  </div>
</DocumentFragment>
`;

exports[`test rendering of Exceeds one or more burdens when is NOT burdended 1`] = `
<DocumentFragment>
  <div>
    <div>
      At or above at least one threshold?
    </div>
    <div>
      No
    </div>
  </div>
</DocumentFragment>
`;

exports[`test rendering of Exceeds one or more burdens when is burdended 1`] = `
<DocumentFragment>
  <div>
    <div>
      At or above at least one threshold?
    </div>
    <div>
      Yes
    </div>
  </div>
</DocumentFragment>
`;
